--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,9 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="boxicons/css/boxicons.min.css" rel="stylesheet" />
-    <link href="vendor/glightbox/css/glightbox.min.css" rel="stylesheet" />
+    <link href="glightbox/css/glightbox.min.css" rel="stylesheet" />
     <link rel="icon" href="img/icon-bohikor.jpg" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/icon-style.css" />
     <link rel="stylesheet" href="css/owl.carousel.min.css" />
     <link rel="stylesheet" href="css/slider-style.css" />
 
@@ -36,8 +35,8 @@
     <div id="root"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/jquery-3.3.1.min.js"></script>
-    <!-- <script src="js/main.js"></script> -->
     <script src="js/owl.carousel.min.js"></script>
+    <script src="glightbox/js/glightbox.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/slider-main.js"></script>
     <script>
