--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -39,5 +43,13 @@
     <script src="glightbox/js/glightbox.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/slider-main.js"></script>
+
+    <script>
+      $(document).ready(function () {
+        $("#menu-btn").click(function () {
+          $('#ul-content').slideToggle();
+        });
+      });
+    </script>
   </body>
 </html>
